refactor(diarioDeUmaPaixao.html): adicionar frases

--- a/pages/diarioDeUmaPaixao.html
+++ b/pages/diarioDeUmaPaixao.html
@@ -99,15 +99,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Diario-de-Uma-Paixao.jpg">
-            <img id="img2" src="../assets/img/img2-Diario-de-Uma-Paixao.jpg">
-            <img id="img3" src="../assets/img/img3-Diario-de-Uma-Paixao.jpg">
-            <img id="img4" src="../assets/img/img4-Diario-de-Uma-Paixao.jpg">
-            <img id="img5" src="../assets/img/img5-Diario-de-Uma-Paixao.jpg">
-            <img id="img6" src="../assets/img/img6-Diario-de-Uma-Paixao.jpg">
-            <img id="img7" src="../assets/img/img7-Diario-de-Uma-Paixao.jpg">
-            <img id="img8" src="../assets/img/img8-Diario-de-Uma-Paixao.jpg">
-            <img id="img9" src="../assets/img/img9-Diario-de-Uma-Paixao.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Era um romance improvável. Ele era do interior, ela da cidade.”</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Eu posso ser o que você quiser. Me diga o que quer e eu serei para você.”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Porque em cada pedaço de mim, sempre haverá um pedaço de você”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Não há monumentos dedicados a mim e o meu nome em breve será esquecido, mas amei outra pessoa com toda minha alma e coração, para mim isso sempre bastou.”</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“O melhor amor é aquele que desperta a alma e nos faz querer mais.”</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“- Porque você está me olhando assim? <br>- Lembranças.”</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Não estou triste porque o que tivemos foi real.”</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Quero você inteira para sempre. Você e eu todos os dias.”</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Diario-de-Uma-Paixao.jpg">
+                <div class="frase">“Mas quero fazer isso. Porque quero você.”</div>
+            </div>
         </section>
 
     </main>
