--- a/pages/gilmoreGirls.html
+++ b/pages/gilmoreGirls.html
@@ -98,15 +98,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Gilmore-Girls.jpg">
-            <img id="img2" src="../assets/img/img2-Gilmore-Girls.jpg">
-            <img id="img3" src="../assets/img/img3-Gilmore-Girls.jpg">
-            <img id="img4" src="../assets/img/img4-Gilmore-Girls.jpg">
-            <img id="img5" src="../assets/img/img5-Gilmore-Girls.jpg">
-            <img id="img6" src="../assets/img/img6-Gilmore-Girls.jpg">
-            <img id="img7" src="../assets/img/img7-Gilmore-Girls.jpg">
-            <img id="img8" src="../assets/img/img8-Gilmore-Girls.jpg">
-            <img id="img9" src="../assets/img/img9-Gilmore-Girls.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Gilmore-Girls.jpg">
+                <div class="frase">“As pessoas podem viver por cem anos sem viver por um minuto.”</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Gilmore-Girls.jpg">
+                <div class="frase">“Eu vivo em dois mundos. Um é um mundo de livros.”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Gilmore-Girls.jpg">
+                <div class="frase">“Quem se importa se eu sou bonita se eu reprovar nas minhas provas finais?”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Gilmore-Girls.jpg">
+                <div class="frase">“Se minha esposa quer a primeira xícara de chá, ela terá a primeira xícara de chá!“</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Gilmore-Girls.jpg">
+                <div class="frase">“Eu te amo com mil margaridas amarelas.”</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Gilmore-Girls.jpg">
+                <div class="frase">“Se você vai jogar sua vida fora, que ele tenha pelo menos uma moto!”</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Gilmore-Girls.jpg">
+                <div class="frase">"Você nem sempre controla por quem você sente atração."</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Gilmore-Girls.jpg">
+                <div class="frase">"Coloque o pijama, vá pra cama e não coma nada exceto litros de sorvete e toneladas de pizza."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Gilmore-Girls.jpg">
+                <div class="frase">"Tudo que a gente quer é isso, encontrar uma pessoa legal pra passar o tempo até a gente morrer. Não estamos pedindo muito!"</div>
+            </div>
         </section>
 
     </main>
