refactor(monteCarlo.html): adicionar frases

--- a/pages/monteCarlo.html
+++ b/pages/monteCarlo.html
@@ -98,15 +98,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Monte-Carlo.jpg">
-            <img id="img2" src="../assets/img/img2-Monte-Carlo.jpg">
-            <img id="img3" src="../assets/img/img3-Monte-Carlo.jpg">
-            <img id="img4" src="../assets/img/img4-Monte-Carlo.jpg">
-            <img id="img5" src="../assets/img/img5-Monte-Carlo.jpg">
-            <img id="img6" src="../assets/img/img6-Monte-Carlo.jpg">
-            <img id="img7" src="../assets/img/img7-Monte-Carlo.jpg">
-            <img id="img8" src="../assets/img/img8-Monte-Carlo.jpg">
-            <img id="img9" src="../assets/img/img9-Monte-Carlo.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Monte-Carlo.jpg">
+                <div class="frase">“Finalmente conheci um cara que gosta de mim como eu sou... Mas eu nem sou eu mesma.”</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Monte-Carlo.jpg">
+                <div class="frase">“Você veio até Paris por mim?”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Monte-Carlo.jpg">
+                <div class="frase">“Você deve ser a mudança que quer ver no mundo.”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Monte-Carlo.jpg">
+                <div class="frase">“A minha vida é uma rotina. As mesmas pessoas. As mesmas conversas. As mesmas festas. Já não significam nada.”</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Monte-Carlo.jpg">
+                <div class="frase">"Desculpe, mas eu não estou feliz."</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Monte-Carlo.jpg">
+                <div class="frase">"As pessoas mudam."</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Monte-Carlo.jpg">
+                <div class="frase">"Ainda não consegui encontrar o meu caminho de volta."</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Monte-Carlo.jpg">
+                <div class="frase">"No fim, andar por aí parece ser a melhor compensação."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Monte-Carlo.jpg">
+                <div class="frase">"Uma nova folha em branco, uma nova eu."</div>
+            </div>
         </section>
 
     </main>
