refactor(theChosen.html): alterar uma frase

--- a/pages/theChosen.html
+++ b/pages/theChosen.html
@@ -110,7 +110,7 @@
             </div>
             <div class="container">
                 <img id="img4" src="../assets/img/img4-The-Chosen.jpg">
-                <div class="frase">“Venham a mim todos que estão cansados e sobrecarregados, e eu lhes darei descanso.”</div>
+                <div class="frase">“Eu não preciso que você sinta nada para fazer grandes coisas.”</div>
             </div>
             <div class="container">
                 <img id="img5" src="../assets/img/img5-The-Chosen.jpg">
