refactor(queridoJohn.html): adicionar frases

--- a/pages/queridoJohn.html
+++ b/pages/queridoJohn.html
@@ -99,15 +99,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Querido-John.jpg">
-            <img id="img2" src="../assets/img/img2-Querido-John.jpg">
-            <img id="img3" src="../assets/img/img3-Querido-John.jpg">
-            <img id="img4" src="../assets/img/img4-Querido-John.jpg">
-            <img id="img5" src="../assets/img/img5-Querido-John.jpg">
-            <img id="img6" src="../assets/img/img6-Querido-John.jpg">
-            <img id="img7" src="../assets/img/img7-Querido-John.jpg">
-            <img id="img8" src="../assets/img/img8-Querido-John.jpg">
-            <img id="img9" src="../assets/img/img9-Querido-John.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Querido-John.jpg">
+                <div class="frase">"Querido John, conte-me tudo, escreva tudo. Dessa forma, estaremos juntos o tempo todo, mesmo que não estejamos juntos de fato."</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Querido-John.jpg">
+                <div class="frase">"Só não se esqueça, que eu lutei mesmo sem forças. Que eu sorri mesmo sem motivo e que eu te amei, mesmo que você não tenha me amado de volta."</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Querido-John.jpg">
+                <div class="frase">“Duas semanas juntos, foi tudo o que precisei, duas semanas para me apaixonar por você.”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Querido-John.jpg">
+                <div class="frase">“Não importa quantos anos passem, sei que uma coisa permanece tão verdadeira quanto sempre foi: nos veremos em breve.”</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Querido-John.jpg">
+                <div class="frase">“Só de ouvir sua voz, eu já teria mudado de ideia.”</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Querido-John.jpg">
+                <div class="frase">“Não importa onde você esteja no mundo, a lua nunca é maior que o seu polegar.”</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Querido-John.jpg">
+                <div class="frase">“MUITA COISA PODE ACONTECER EM 12 MESES, JOHN.”</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Querido-John.jpg">
+                <div class="frase">"Quando penso em você, não posso deixar de sorrir, sabendo que você me completa. Eu te amo, não só agora, mas sempre."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Querido-John.jpg">
+                <div class="frase">"Aprendi que é possível seguir em frente, não importa quanto pareça impossível. Com o tempo a dor diminui."</div>
+            </div>
         </section>
 
     </main>
