refactor(sempreAoSeuLado.html): adicionar frases

--- a/pages/sempreAoSeuLado.html
+++ b/pages/sempreAoSeuLado.html
@@ -98,15 +98,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Sempre-ao-Seu-Lado.jpg">
-            <img id="img2" src="../assets/img/img2-Sempre-ao-Seu-Lado.jpg">
-            <img id="img3" src="../assets/img/img3-Sempre-ao-Seu-Lado.jpg">
-            <img id="img4" src="../assets/img/img4-Sempre-ao-Seu-Lado.jpg">
-            <img id="img5" src="../assets/img/img5-Sempre-ao-Seu-Lado.jpg">
-            <img id="img6" src="../assets/img/img6-Sempre-ao-Seu-Lado.jpg">
-            <img id="img7" src="../assets/img/img7-Sempre-ao-Seu-Lado.jpg">
-            <img id="img8" src="../assets/img/img8-Sempre-ao-Seu-Lado.jpg">
-            <img id="img9" src="../assets/img/img9-Sempre-ao-Seu-Lado.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">“Vou esperar por você, não importa quanto tempo leve."</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">“Eu vejo e ouço Deus em tudo, mas não entendo completamente Deus.”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">“Eles me ensinaram o significado da lealdade, e a nunca esquecer aqueles que amamos.”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">"Saudade existe, não porque estamos longe, mas porque um dia estivemos juntos".</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">"Uma pessoa não precisa estar ao seu lado a vida inteira, para se tornar única e inesquecível."</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">"Uma amizade pode durar para sempre."</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">"Entendo como se sente. Hachi, ele não vai voltar. Mas se quer esperar, então deve esperar."</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">"Você continua esperando..."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Sempre-ao-Seu-Lado.jpg">
+                <div class="frase">“Vou esperar por você, não importa quanto tempo leve."</div>
+            </div>
         </section>
 
     </main>
