refactor(sorrisoReal.html): adicionar frases

--- a/pages/sorrisoReal.html
+++ b/pages/sorrisoReal.html
@@ -98,15 +98,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Sorriso-Real.jpg">
-            <img id="img2" src="../assets/img/img2-Sorriso-Real.jpg">
-            <img id="img3" src="../assets/img/img3-Sorriso-Real.jpg">
-            <img id="img4" src="../assets/img/img4-Sorriso-Real.jpg">
-            <img id="img5" src="../assets/img/img5-Sorriso-Real.jpg">
-            <img id="img6" src="../assets/img/img6-Sorriso-Real.jpg">
-            <img id="img7" src="../assets/img/img7-Sorriso-Real.jpg">
-            <img id="img8" src="../assets/img/img8-Sorriso-Real.jpg">
-            <img id="img9" src="../assets/img/img9-Sorriso-Real.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Sorriso-Real.jpg">
+                <div class="frase">"Se falar que é impossível, vai ser mesmo. Mas se acreditar, tudo é possível."</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Sorriso-Real.jpg">
+                <div class="frase">"Aprendi que o poder de um sorriso pode curar até as feridas mais profundas."</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Sorriso-Real.jpg">
+                <div class="frase">"Um sorriso é a nossa melhor arma."</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Sorriso-Real.jpg">
+                <div class="frase">"A qualidade mais importante do estagiário não é o quão bem faz seu trabalho. É ter bom senso."</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Sorriso-Real.jpg">
+                <div class="frase">"Não peça desculpas quando não fez nada de errado."</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Sorriso-Real.jpg">
+                <div class="frase">Obrigada por gostar de tudo em mim."</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Sorriso-Real.jpg">
+                <div class="frase">"Sempre estarei ao seu lado. Sempre estarei onde possa me ver. Sempre estarei ao alcance da sua mão."</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Sorriso-Real.jpg">
+                <div class="frase">"Comece a namorar só depois de ter sentimentos para não se arrepender."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Sorriso-Real.jpg">
+                <div class="frase">"Não estou te dando bola, então pare de me seguir."</div>
+            </div>
         </section>
 
     </main>
