refactor(orgulhoEPreconceito.html): adicionar frases

--- a/pages/orgulhoEPreconceito.html
+++ b/pages/orgulhoEPreconceito.html
@@ -97,15 +97,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-Orgulho-e-Preconceito.jpg">
-            <img id="img2" src="../assets/img/img2-Orgulho-e-Preconceito.jpg">
-            <img id="img3" src="../assets/img/img3-Orgulho-e-Preconceito.jpg">
-            <img id="img4" src="../assets/img/img4-Orgulho-e-Preconceito.jpg">
-            <img id="img5" src="../assets/img/img5-Orgulho-e-Preconceito.jpg">
-            <img id="img6" src="../assets/img/img6-Orgulho-e-Preconceito.jpg">
-            <img id="img7" src="../assets/img/img7-Orgulho-e-Preconceito.jpg">
-            <img id="img8" src="../assets/img/img8-Orgulho-e-Preconceito.jpg">
-            <img id="img9" src="../assets/img/img9-Orgulho-e-Preconceito.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Eu poderia facilmente perdoar seu orgulho, se ele não tivesse mortificado o meu.”</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Com a maior intensidade.”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Você encantou meu corpo e alma.”</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Você deve saber… Certamente, você deve saber que foi tudo por você.”</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Eu amo, eu amo, eu a amo.”</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Eu costumo considerar a poesia o alimento do amor.”</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Mas confesso que a mim nada disso me encanta. Prefiro infinitamente um livro.”</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-Orgulho-e-Preconceito.jpg">
+                <div class="frase">“Apenas o amor mais profundo pode me persuadir a casar.”</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-Orgulho-e-Preconceito.jpg">
+                <div class="frase">"O amor só é verdadeiro quando acontece à segunda vista."</div>
+            </div>
         </section>
 
     </main>
