refactor(deVoltaParaOFuturo.html): adicionar frases

--- a/pages/deVoltaParaOFuturo.html
+++ b/pages/deVoltaParaOFuturo.html
@@ -99,15 +99,42 @@
         </section>
 
         <section id="imgs">
-            <img id="img1" src="../assets/img/img1-De-Volta-para-o-Futuro.jpg">
-            <img id="img2" src="../assets/img/img2-De-Volta-para-o-Futuro.jpg">
-            <img id="img3" src="../assets/img/img3-De-Volta-para-o-Futuro.jpg">
-            <img id="img4" src="../assets/img/img4-De-Volta-para-o-Futuro.jpg">
-            <img id="img5" src="../assets/img/img5-De-Volta-para-o-Futuro.jpg">
-            <img id="img6" src="../assets/img/img6-De-Volta-para-o-Futuro.jpg">
-            <img id="img7" src="../assets/img/img7-De-Volta-para-o-Futuro.jpg">
-            <img id="img8" src="../assets/img/img8-De-Volta-para-o-Futuro.jpg">
-            <img id="img9" src="../assets/img/img9-De-Volta-para-o-Futuro.jpg">
+            <div class="container">
+                <img id="img1" src="../assets/img/img1-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">“Quer dizer que seu futuro ainda não foi escrito. Seu futuro é o que você fizer dele. Então faça algo bom.”</div>
+            </div>
+            <div class="container">
+                <img id="img2" src="../assets/img/img2-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">“No próximo sábado, mandaremos você de volta para o futuro.”</div>
+            </div>
+            <div class="container">
+                <img id="img3" src="../assets/img/img3-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Estradas? Para onde vamos, não precisamos de estradas."</div>
+            </div>
+            <div class="container">
+                <img id="img4" src="../assets/img/img4-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Eu acho que encontrei a resposta para todos os problemas da minha vida. Está tudo no passado."</div>
+            </div>
+            <div class="container">
+                <img id="img5" src="../assets/img/img5-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Eu acho que vocês ainda não estão preparados para isso, mas seus filhos vão adorar."</div>
+            </div>
+            <div class="container">
+                <img id="img6" src="../assets/img/img6-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Quando ela acordar, vai achar que foi um sonho."</div>
+            </div>
+            <div class="container">
+                <img id="img7" src="../assets/img/img7-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Você é colírio para meus olhos."</div>
+            </div>
+            <div class="container">
+                <img id="img8" src="../assets/img/img8-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Você fez diferença em minha vida, me mostrou algo que vale a pena lutar."</div>
+            </div>
+            <div class="container">
+                <img id="img9" src="../assets/img/img9-De-Volta-para-o-Futuro.jpg">
+                <div class="frase">"Todas suas perguntas serão respondidas no tempo certo."</div>
+            </div>
         </section>
 
     </main>
