feat(mariana): adicionar diario com fotos de pessoas importantes

--- a/pages/mariana.html
+++ b/pages/mariana.html
@@ -45,7 +45,7 @@
 
         <section id="sobre-mim">
             <div>
-                <img src="../assets/img/colagem.png" alt="CColagem">
+                <img src="../assets/img/colagem.png" alt="Colagem">
             </div>
             <div>
                 <p id="sobre-mim-titulo">Sobre <span class="italic-text">mim</span></p>
@@ -271,6 +271,25 @@
                     <p class="nome-pais">Grécia</p>
                 </div>
             </div>
+        </section>
+        <section id="pessoas-importantes-section">
+            <div id="container-fotos">
+                <div id="caderno">
+                    <img id="img-caderno" src="../assets/img/caderno.png" alt="Caderno">
+                </div>
+                <img id="familia" src="../assets/img/familia.png" alt="Familia">
+                <img id="giovanna" src="../assets/img/giovanna.png" alt="Giovanna">
+                <img id="miguel" src="../assets/img/miguel.png" alt="Miguel">
+                <img id="amigos-celula" src="../assets/img/amigos-celula.png" alt="Amigos da célula">
+                <img id="amigas-shalom" src="../assets/img/amigas-shalom.png" alt="Amigas do shalom">
+                <img id="leo" src="../assets/img/leo.png" alt="Leo">
+                <img id="vovo" src="../assets/img/vovo.png" alt="Vovô">
+                <img id="besties" src="../assets/img/besties.png" alt="Raquel e Vic">
+                <img id="soso" src="../assets/img/soso.png" alt="Soso">
+                <img id="amigas-danca" src="../assets/img/amigas-danca.png" alt="Amigas da dança">
+                <img id="joao" src="../assets/img/joao.png" alt="João">
+            </div>
+
         </section>
     </main>
 
