--- a/pages/mariana.html
+++ b/pages/mariana.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-        
+
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
@@ -101,15 +101,15 @@
                         </div>
                     </div>
                 </div>
-        
+
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="numero-de-pi" src="../assets/img/numero-de-pi.png" alt="Número de Pi">
+                            <img id="onda" src="../assets/img/onda.png" alt="Onda">
                             <p>4</p>
                         </div>
                         <div class="card-verso">
-                            <p>A senha do meu celular já foi os 6 primeiros dígitos de π.</p>
+                            <p>Ganhei medalha de prata na Olímpiada do Oceano</p>
                         </div>
                     </div>
                 </div>
@@ -141,11 +141,11 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="pimenta" src="../assets/img/pimenta.png" alt="Pimenta">
+                            <img id="diario" src="../assets/img/diario.png" alt="Diário">
                             <p>7</p>
                         </div>
                         <div class="card-verso">
-                            <p>Gosto muito de pimenta.</p>
+                            <p>Amo escrever</p>
                         </div>
                     </div>
                 </div>
@@ -153,11 +153,23 @@
                 <div class="card-curiosidade">
                     <div class="card-interno">
                         <div class="card-frente">
-                            <img id="diario" src="../assets/img/diario.png" alt="Pimenta">
+                            <img id="cubo" src="../assets/img/cubo-magico.png" alt="Cubo Mágico">
                             <p>8</p>
                         </div>
                         <div class="card-verso">
-                            <p>Amo escrever no meu diário.</p>
+                            <p>Já participei de campeonatos de cubo mágico</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-curiosidade">
+                    <div class="card-interno">
+                        <div class="card-frente">
+                            <img id="cubo" src="../assets/img/japones.png" alt="Kanji de Deus">
+                            <p>9</p>
+                        </div>
+                        <div class="card-verso">
+                            <p>Sei manter uma conversa básica em japonês</p>
                         </div>
                     </div>
                 </div>
